1/8/13 a couple of tweaks to make GTL and PTP view implementations more similar, to ease refactoring
1/8/13 change "P3P" (Place 3 Points) to "PTP" (Place the Points) throughout code, to match terminology used by the team
# 0.00.48 (71539) Jan 8, 2013
1/8/13 demonstrate equation fixes
1/8/13 fix: in point-slope equations, if interactive rise=0, then noninteractive (x-x1) term disappears
1/8/13 fix: in slope-intercept equations, if interactive run=0, then noninteractive y-intercept is 0/0
1/8/13 fix: in slope-intercept equations, if interactive run=0, then interactive y-intercept can't be changed
1/8/13 slope-intercept equations: use separate properties and node for interactive (integer) vs non-interactive (fractional) y-intercept
1/8/13 add developer "Skip" button for skipping the current challenge
1/8/13 change request: "Set the y-Intercept" -> "Set the Y-intercept"
# 0.00.47 (71528) Jan 7, 2013
1/7/13 add challenge descriptions, displayed below challenge title for debugging purposes
1/7/13 first attempt at forcing slope inversion in level=4
1/7/13 first pass at challenge generation for level=4
1/7/13 cleanup and document challenge generation for levels 1-3
1/7/13 challenge generation for level=3
# 0.00.46 (71520) Jan 7, 2013
1/7/13 demonstrate challenge generation for levels 1 & 2
1/7/13 position "Replay" button below "Next" button
1/7/13 add ability to reset a challenge, add developer "Replay" button for replaying the current challenge
1/7/13 in level 2, constrain (x1,y1) so that slope indicator stays on the graph
1/7/13 encapsulate challenge factory choice in ChallengeFactory.createChallenges
1/7/13 move hard-coded challenges to their own factory class
1/3/13 fix: for P3P challenges, show "not a line" when guess is not a line (broken during refactoring from 0.00.44 to 0.00.45)
1/2/13 when P3P is correct, set the guess to the answer, so that equations will match
1/2/13 first pass at challenge generation for level=2