@@ -24,13 +24,13 @@ public class ChallengeFactoryHardCoded {
                 challenges.add( new GTL_Challenge( DESCRIPTION, Line.createSlopeIntercept( 1, 1, -2 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.INTERCEPT, xRange, yRange ) );
                 challenges.add( new GTL_Challenge( DESCRIPTION, Line.createSlopeIntercept( 5, 1, 1 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.SLOPE, xRange, yRange ) );
                 challenges.add( new GTL_Challenge( DESCRIPTION, Line.createSlopeIntercept( 4, 2, 3 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.SLOPE_INTERCEPT, xRange, yRange ) );
-                challenges.add( new GTL_Challenge( DESCRIPTION, Line.createSlopeIntercept( 3, 3, -3 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.POINTS, xRange, yRange ) );
+                challenges.add( new GTL_Challenge( DESCRIPTION, Line.createSlopeIntercept( 3, 3, -3 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.TWO_POINTS, xRange, yRange ) );
                 break;
             case 2:
                 challenges.add( new GTL_Challenge( DESCRIPTION, Line.createPointSlope( 2, 1, 1, 2 ), LineForm.POINT_SLOPE, ManipulationMode.SLOPE, xRange, yRange ) );
                 challenges.add( new GTL_Challenge( DESCRIPTION, Line.createPointSlope( 1, -3, 1, 3 ), LineForm.POINT_SLOPE, ManipulationMode.POINT, xRange, yRange ) );
                 challenges.add( new GTL_Challenge( DESCRIPTION, Line.createPointSlope( -2, 1, -4, 3 ), LineForm.POINT_SLOPE, ManipulationMode.POINT_SLOPE, xRange, yRange ) );
-                challenges.add( new GTL_Challenge( DESCRIPTION, Line.createPointSlope( 5, 4, 3, 2 ), LineForm.POINT_SLOPE, ManipulationMode.POINTS, xRange, yRange ) );
+                challenges.add( new GTL_Challenge( DESCRIPTION, Line.createPointSlope( 5, 4, 3, 2 ), LineForm.POINT_SLOPE, ManipulationMode.TWO_POINTS, xRange, yRange ) );
                 break;
             case 3:
                 challenges.add( new MTE_Challenge( DESCRIPTION, Line.createSlopeIntercept( 1, 1, -2 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.INTERCEPT, xRange, yRange ) );
